added form to html and css
changed background color

--- a/index.html
+++ b/index.html
@@ -24,8 +24,24 @@
 
 <body>
   <!-- Place your site's HTML here -->
-  <p>This text will display on your site! Jan 19</p>
   <script src="js/main.js"></script>
 </body>
+
+</section>
+<form action="" method="get" class="form-example">
+  <div class="form-example">
+    <label for="first-name">First Name: </label>
+    <input type="text" name="first-name" id="first-name" required />
+  </div>
+  <div class="form-example">
+    <label for="last-name">Last Name: </label>
+    <input type="text" name="last-name" id="last-name" required />
+  </div>
+  <div class="form-example">
+    <input type="submit" value="Subscribe!" />
+  </div>
+</form>
+<label for="birthday">Birthday:</label>
+<input type="date" id="birthday" name="birthday" value="2018-07-22" min="2018-01-01" max="2018-12-31" />
 
 </html>
