added about and contact folder with navigation menu

--- a/Contact.html
+++ b/Contact.html
@@ -34,7 +34,7 @@
       <li class="one"><a href="./index.html">Home</a></li>
     </ol>
   </nav>
-  <h1>Main Page Title</h1>
+  <h1>Contact</h1>
 </header>
 </section>
 <form action="" method="get" class="form-example">
