--- a/About.html
+++ b/About.html
@@ -38,15 +38,15 @@
 </header>
 </section>
 <form action="" method="get" class="form-example">
-  <div class="form-example">
+  <div class="form">
     <label for="first-name">First Name: </label>
     <input type="text" name="first-name" id="first-name" required />
   </div>
-  <div class="form-example">
+  <div class="form">
     <label for="last-name">Last Name: </label>
     <input type="text" name="last-name" id="last-name" required />
   </div>
-  <div class="form-example">
+  <div class="form">
     <input type="submit" value="Subscribe!" />
   </div>
 </form>
