--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
   <h1>Main Page Title</h1>
 </header>
 </section>
-<form action="" method="get" class="form-example">
-  <div class="form-example">
+<form action="" method="get" class="form">
+  <div class="form">
     <label for="first-name">First Name: </label>
     <input type="text" name="first-name" id="first-name" required />
   </div>
-  <div class="form-example">
+  <div class="form">
     <label for="last-name">Last Name: </label>
     <input type="text" name="last-name" id="last-name" required />
   </div>
-  <div class="form-example">
+  <div class="form">
     <input type="submit" value="Subscribe!" />
   </div>
 </form>
